--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"@fontsource-variable/lexend-exa": "^5.1.1"
+		"@fontsource-variable/lexend-exa": "^5.1.1",
+		"@iconify/svelte": "^4.2.0"
 	}
 }
