--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"dependencies": {
 		"@fontsource-variable/lexend-exa": "^5.1.1",
-		"@iconify/svelte": "^4.2.0"
+		"@iconify/svelte": "^4.2.0",
+		"vite-plugin-pwa": "^0.21.1"
 	}
 }
