--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "vite dev --host",
 		"build": "vite build",
+		"deploy": "gh-pages -d build -t",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -17,6 +18,7 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
@@ -38,6 +40,7 @@
 	"dependencies": {
 		"@fontsource-variable/lexend-exa": "^5.1.1",
 		"@iconify/svelte": "^4.2.0",
+		"gh-pages": "^6.3.0",
 		"vite-plugin-pwa": "^0.21.1"
 	}
 }
