--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 	"dependencies": {
 		"@fontsource-variable/lexend-exa": "^5.1.1",
 		"@iconify/svelte": "^4.2.0",
+		"@sveltejs/adapter-cloudflare": "^5.0.3",
+		"coi-serviceworker": "^0.1.7",
 		"gh-pages": "^6.3.0",
 		"vite-plugin-pwa": "^0.21.1"
 	}
